--- a/app/css/constants/dimensions.scss
+++ b/app/css/constants/dimensions.scss
@@ -34,7 +34,7 @@ $dropdown-min-width: 12rem;
 $modal-width: 50rem;
 
 /* Other */
-$drag-width: 0.6em;
+$drag-width: 0.5em;
 
 /* Breakpoints */
 $breakpoint-lg: 1100px;
